# Dirac

./: .gitignore  Cargo.toml  README.md  dirac.skills.md
.cargo/: config.toml
crates/colosseum-logic/: Cargo.toml
crates/dirac-logic/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: bento-widgets.tsx  copy-button.tsx  cta-button.tsx  demo-duel.tsx  feature-bento.tsx  flip-text.tsx  hero.tsx  how-it-works.tsx  nebula-background.tsx  play-section.tsx  pot-banner.tsx  progressive-blur.tsx  reveal.tsx  section-heading.tsx  site-footer.tsx  site-nav.tsx  snippet-tabs.tsx  terminal-window.tsx
frontend/lib/: content.ts  demo-engine.ts  icons.ts  unicorn.ts
programs/colosseum/: .binpath  Cargo.toml  colosseum.idl
programs/colosseum-client/: Cargo.toml  build.rs
programs/colosseum/src/: admin.rs  game.rs  lib.rs  state.rs  types.rs
programs/dirac/: .binpath  Cargo.toml  bounty-announcement.json  bounty-chat.json  bounty.json  dirac.idl  identity-card.json  launch-announcement.json  recruit-post.json  register-app.json
programs/dirac-client/: Cargo.toml  build.rs
programs/dirac-client/src/: lib.rs
programs/dirac/src/: config.rs  game.rs  lib.rs  state.rs  types.rs
programs/dirac/tests/: gtest.rs
runner/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
runner/deploy/: DEPLOY.md  dirac-runner.service  ecosystem.config.cjs
runner/scripts/: gen-wallet.mjs
runner/src/: broadcaster.ts  events.ts  index.ts  mentions.ts  network.ts  refresh.ts  secrets.ts  (+1 more)
(+19 files in other folders)
